src/test/deca/context/valid/divide_intvar_int_divide_int_context.deca
// Description :
//
//      Test contextuellement correct de la division d'un int et d'un int dans une variable int
//
// Résultats :
//
//      N/A
//
// Historique :
//
//      Créé le 07/06/2023 par gl03

{
    float y = 3/ 2;
    print(y);
}
